# matching

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  graph.cpp  heap.h  main.cpp  matching_preparation.h  package-lock.json  package.json  pupil.h  student.h  tsconfig.json
sample_input_data/: dissolved_matches.txt  pupils.csv  pupils.txt  students_lower_bound.csv  students_upper_bound.csv
src/: Matching_Algorithm.pro  algo.cpp  algo.h  dijkstra.h  graph.h  main.cpp  matching_preparation.h  student.cpp
src/cli/: index.ts
src/matching_algo/: index.cpp
src/matching_algo/src/: algo.cpp  graph.cpp  queue.h
src/module/: index.ts  types.ts
src/module/algo/: algoColumnNames.ts  inputCreation.ts  outputParsing.ts  run.ts
src/module/utils/: files.ts  subjects.ts  table.ts
tests/: simpleMatching.test.data.ts  simpleMatching.test.ts  staticCases.test.ts
tests/testData/1/: input.json  output.json
tests/testData/10/: input.json  output.json
tests/testData/11/: input.json  output.json
tests/testData/12/: input.json  output.json
tests/testData/13/: input.json  output.json
tests/testData/14/: input.json  output.json
tests/testData/15/: input.json  output.json
tests/testData/16/: input.json  output.json
tests/testData/2/: input.json  output.json
tests/testData/3/: input.json  output.json
tests/testData/4/: input.json  output.json
tests/testData/5/: input.json  output.json
tests/testData/6/: input.json  output.json
tests/testData/7/: input.json  output.json
tests/testData/8/: input.json  output.json
tests/testData/9/: input.json  (+1 more)
